# insrcdata

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  template.toml
examples/: README.md  test_all.py
examples/bench/: readme.md  runbench.py
examples/bench/c-bench/: insrcdata.c  insrcdata.h  main.c
examples/bench/insrcdata/: databench.csv  insrcdata.toml
examples/bench/swift-bench/: insrcdata.c  insrcdata.h  insrcdata.swift  main.swift
examples/country/c-country/: inexata.h  insrcdata.c  insrcdata.h  main.c
examples/country/insrcdata/: countries.csv  insrcdata.toml  parse.py  region.csv  subregion.csv
examples/country/rust-country/: Cargo.toml  build.rs
examples/country/swift-country/: insrcdata.c  insrcdata.h  insrcdata.swift  main.swift  swift-country-Bridging-Header.h
examples/helloworld/c-helloworld/: inexata.c  inexata.h  insrcdata.c  insrcdata.h  main.c
examples/helloworld/insrcdata/: helloworld.csv  insrcdata.toml
examples/helloworld/rust-helloworld/: Cargo.toml  build.rs
examples/helloworld/swift-helloworld/: insrcdata.c  insrcdata.h  insrcdata.swift  main.swift
examples/hierarchy/c-hierarchy/: insrcdata.c  insrcdata.h  main.c
examples/hierarchy/insrcdata/: chapters.csv  insrcdata.toml  leaves.csv
examples/hierarchy/swift-hierarchy/: insrcdata.c  insrcdata.h  insrcdata.swift  main.swift
src/: aperror.rs  basetype.rs  colbool.rs  colfloat.rs  colint.rs  coljoin.rs  collabel.rs  colobject.rs  colstr.rs  colvariant.rs  config.rs  index.rs  langc.rs  langrust.rs  langswift.rs  language.rs  lib.rs  lint.rs  log.rs  main.rs  table.rs
(+114 files in other folders)
