[package]
name = "insrcdata"
version = "0.2.0"
edition = "2021"
description = "Embed static data as source code" 
license = "GPL-3.0-or-later"
categories = [ "data-structures", "command-line-utilities"]
keywords = ["source", "constants", "array"]
repository = "https://github.com/sebkeim/insrcdata"
documentation = "https://github.com/sebkeim/insrcdata/wiki"
homepage = "https://www.insrcdata.org"
authors = ["Sebastien Keim <insrcdata@gmail.com>"]

[dependencies]
toml = "0.7.3"
serde_derive = "1.0.145"
serde = "1.0.145"
csv = "1.1"
clap = { version = "4.2.7", features = ["derive"] }
heck = "0.4.1"
